crates/language-v2/tests/src/fail/p1_definitions/operator_mismatch/test.stderr
error: All operators under the same expression must have the same model and type.
  --> src/fail/p1_definitions/operator_mismatch/test.rs:18:32
   |
18 |                         name = Foo,
   |                                ^^^
